# lib-messaging

./: .gitignore  Cargo.toml  LibMessagingClient.podspec  README.md  package.json
.github/workflows/: ios_artifacts.yml
java/: Dockerfile  Makefile  build.gradle  build_jni.sh  check_code_size.py  settings.gradle
java/android/: build.gradle
java/android/benchmarks/: build.gradle
java/android/benchmarks/src/androidTest/java/: ECCBenchmark.java
java/android/src/main/: AndroidManifest.xml
java/client/: build.gradle
java/client/src/main/java/org/readyio/libmessaging/crypto/: CryptographicMac.java
java/gradle/wrapper/: gradle-wrapper.properties
java/shared/java/com/cystack/ready/libmessaging/internal/: Native.java  NativeHandleGuard.java
java/shared/java/com/cystack/ready/libmessaging/protocol/: CypherUtils.kt  DuplicateMessageException.java  InvalidKeyException.java  InvalidKeyIdException.java  InvalidMacException.java  InvalidMessageException.java  InvalidSessionException.java  InvalidVersionException.java  LegacyMessageException.java
java/shared/java/com/cystack/ready/libmessaging/protocol/ecc/: Curve.java  ECKeyPair.java  ECPrivateKey.java  ECPublicKey.java
java/shared/java/com/cystack/ready/libmessaging/protocol/incrementalmac/: InvalidMacException.java  Mac.kt
java/shared/java/com/cystack/ready/libmessaging/protocol/kdf/: HKDF.java
java/shared/java/com/cystack/ready/libmessaging/protocol/logging/: Log.java  MessagingProtocolLogger.java  MessagingProtocolLoggerProvider.java
java/shared/java/com/cystack/ready/libmessaging/protocol/util/: ByteUtil.java  Hex.java  KeyHelper.java  Medium.java  (+1 more)
react-native/: .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  CONTRIBUTING.md  LibMessaging.podspec  README.md  tsconfig.json
react-native/android/: build.gradle  gradle.properties
react-native/android/src/main/: AndroidManifest.xml
react-native/ios/: LibMessaging-Bridging-Header.h  Log.swift  MessagingProtocol.mm  MessagingProtocol.swift
react-native/ios/LibMessaging.xcodeproj/: project.pbxproj
react-native/src/: Address.ts  Errors.ts  Native.ts  helpers.ts  index.ts  session-builder.ts  session-cipher.ts  session-record.ts  session-types.ts  types.ts
react-native/src/internal/: crypto.ts
rust/bridge/ffi/: Cargo.toml  cbindgen.toml
rust/bridge/ffi/src/: lib.rs  util.rs
rust/bridge/jni/: Cargo.toml  build.rs  cbindgen.toml
rust/bridge/jni/src/: lib.rs  logging.rs
rust/bridge/shared/: Cargo.toml
rust/bridge/shared/macros/: Cargo.toml
rust/bridge/shared/macros/src/: ffi.rs  jni.rs  lib.rs
rust/bridge/shared/src/: crypto.rs  incremental_mac.rs  lib.rs  protocol.rs
rust/bridge/shared/src/ffi/: convert.rs  error.rs  mod.rs
rust/bridge/shared/src/jni/: args.rs  convert.rs  error.rs  mod.rs
rust/bridge/shared/src/support/: mod.rs  transform_helper.rs
rust/crypto/: Cargo.toml
rust/crypto/src/: error.rs  lib.rs
rust/libs/block-modes/src/: errors.rs  traits.rs
rust/protocol/: Cargo.toml  build.rs
rust/protocol/src/: crypto.rs  error.rs  lib.rs
rust/protocol/tests/: groups.rs  ratchet.rs  sealed_sender.rs  session.rs
rust/protocol/tests/support/: mod.rs
swift/: .swiftlint.yml  Package.swift  build_ffi.sh
swift/.swiftpm/xcode/package.xcworkspace/xcuserdata/xthang.xcuserdatad/: UserInterfaceState.xcuserstate
swift/.swiftpm/xcode/xcuserdata/xthang.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/Sources/LibMessagingClient/: CypherUtils.swift  Error.swift  IncrementalMac.swift  Kdf.swift  NativeHandleOwner.swift  PrivateKey.swift  PublicKey.swift  Utils.swift
swift/Sources/LibMessagingClient/zkgroup/: ByteArray.swift
swift/Sources/MessagingFfi/: messaging_ffi.h  module.modulemap
(+42 files in other folders)
