[workspace]
members = [
    "rust/crypto",
    "rust/protocol",
    "rust/bridge/ffi",
    "rust/bridge/jni",
]
default-members = [
    "rust/crypto",
    "rust/protocol",
]
resolver = "2" # so that our dev-dependency features don't leak into products

[patch.crates-io]
# Use our fork of curve25519-dalek for eventual zkgroup support.
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', branch = 'lizard2' }
# boring = { git = 'https://github.com/signalapp/boring', branch = 'libsignal'}

# [profile.dev.package.argon2]
# opt-level = 2 # signal-signal-pin unit tests are too slow with an unoptimized argon2
