#
# Copyright (C) 2020 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "lib-messaging-bridge"
version = "0.1.0"
authors = ["Ready.io"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
lib-messaging-protocol = { path = "../../protocol" }
messaging-crypto = { path = "../../crypto" }
# device-transfer = { path = "../../device-transfer" }
# attest = { path = "../../attest" }
# zkgroup = { path = "../../zkgroup" }
# usernames = { path = "../../usernames" }
# signal-pin = { path = "../../pin" }
# signal-media = { path = "../../media", optional = true }
lib-messaging-bridge-macros = { path = "macros" }

aes-gcm-siv = "0.10.1"
async-trait = "0.1.41"
bincode = "1.0"
futures-util = "0.3.7"
hkdf = "0.11"
hmac = "0.11.0"
typenum = "1.12.0"
log = "0.4"
paste = "1.0"
rand = "0.7.3"
scopeguard = "1.0"
serde = "1.0"
sha2 = "0.9"
static_assertions = "1.1"
uuid = "1.1.2"
hex = "0.4.3"

bytemuck = { version = "1.13.0", optional = true }
libc = { version = "0.2", optional = true }
jni_crate = { version = "0.19", package = "jni", optional = true }
neon = { version = "0.10.0", optional = true, default-features = false, features = ["napi-6", "promise-api"] }
linkme = { version = "0.3.9", optional = true }
# signal-neon-futures = { path = "../node/futures", optional = true }
subtle = "2.5.0"
arrayref = "0.3.7"

[features]
default = ["armv8"]
ffi = ["libc", "lib-messaging-bridge-macros/ffi"]
jni = ["jni_crate", "lib-messaging-bridge-macros/jni", "bytemuck"]
# node = ["neon", "linkme", "signal-neon-futures", "lib-messaging-bridge-macros/node"]
armv8 = ["aes-gcm-siv/armv8", "lib-messaging-protocol/armv8", "messaging-crypto/armv8"]
